# vulkanCube

./: CMakeLists.txt  README.md  compile_shaders.bat  main.cpp
shaders/: shader.frag  shader.frag.spv
